добавила регистрацию и авторизацию пользователей(Basic Auth)
