# openapi.yaml
@@ -8,6 +8,8 @@ paths:
     get:
       description: |
         Получение ФИО поьзователя VK и признака участника группы VK
+      security:
+        - basicAuth: []
       parameters:
         - in: header
           name: vk_service_token
@@ -28,9 +30,11 @@ paths:
               schema:
                 $ref: "#/components/schemas/VkResponseDto"
         "400":
-          description: Невалидные параметры в теле запроса.
+          description: Невалидные параметры в теле запроса
+        "401":
+          description: Требуется авторизация в API приложения
         "404":
-          description: Пользователь не найден.
+          description: Пользователь не найден
           content:
             object:
               schema:
@@ -44,6 +48,29 @@ paths:
                 type: string
               example: "error_code: 5
                         error_message: User authorization failed: invalid access_token (4)."
+  /register:
+    post:
+      description: Регистрация пользователя в приложении
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UserDataDto"
+      responses:
+        "200":
+          description: Регистрация прошла успешно
+          content:
+            object:
+              schema:
+                type: string
+              example: "Registration completed."
+        "400":
+          description: Попытка регистрации пользователя с уже существующим username
+          content:
+            object:
+              schema:
+                type: string
+              example: "User with this username already exists."
 
 components:
   schemas:
@@ -101,3 +128,22 @@ components:
         first_name: "Ivan"
         middle_name: "Ivanovich"
         member: true
+    UserDataDto:
+      type: object
+      required:
+        - username
+        - password
+      properties:
+        username:
+          type: string
+          nullable: false
+          description: Логин пользователя в приложении
+          example: "ivan32"
+        password:
+          type: string
+          nullable: false
+          description: Пароль пользователя в приложении
+          example: "PaSSworD"
+      example:
+        username: "ivan32"
+        password: "PaSSworD"
