# src/main/java/gpn/cup/vk_case/dto/UserDataDto.java
@@ -1,0 +1,19 @@
+package gpn.cup.vk_case.dto;
+
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+import javax.validation.constraints.NotBlank;
+
+@Getter
+@Setter
+@NoArgsConstructor
+@AllArgsConstructor
+public class UserDataDto {
+    @NotBlank
+    private String username;
+    @NotBlank
+    private String password;
+}
